# pydantic-settings-yaml

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: commit_checks.yaml  patch.yaml  publish-notest.yaml  publish.yaml  test.yaml
tests/: conftest.py  test_basic.py  test_examples.py
tests/examples/: __init__.py  __main__.py
yaml_settings_pydantic/: __init__.py  __main__.py
